# sobhanath_dairy_farm

./: .env  .gitignore  README.md  firebase.json  pubspec.yaml  test_backend.py
android/: build.gradle.kts
android/app/: build.gradle.kts  google-services.json
backend/: .env  app.js  main.js  main.py  package.json  pyproject.toml
backend/auth/: auth_google.py
backend/config/: appleAuth.py  databseConnection.py  db_connection.js  googleAuth.py
backend/models/: Dairy.py  OwnerSchema.py  customer.js
backend/routers/: dairy.py
backend/routes/: coustomer_route.js  milk_entry.js  sign_in.js  sign_up.js
backend/utils/: jwtToken.py  otp_genrator.js
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  auth_check_screen.dart  firebase_options.dart  main.dart
lib/admin/: admin_home_screen.dart  admin_login_screen.dart  admin_setup_screen.dart  approved_user_list_screen.dart  donation_history_screen.dart  gau_shala_management_screen.dart  milk_entries_screen.dart  monthly_reports_screen.dart  pending_user_list_screen.dart  product_management_screen.dart
lib/auth/: firebase_google_auth.dart
lib/models/: bill.dart  customer.dart  milk_entry.dart
lib/providers/: auth_provider.dart  customer_provider.dart
lib/screens/: billing_screen.dart  calendar_screen.dart  customer_screen.dart  gaushala_screen.dart  home_screen.dart  login_screen.dart  profile_screen.dart  signup_screen.dart
lib/services/: api_service.dart  (+3 more)
linux/: CMakeLists.txt
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+10 files in other folders)
